--- a/src/app/templates/multi_asset.html
+++ b/src/app/templates/multi_asset.html
@@ -8,16 +8,53 @@
         .flex-container {
             display: flex;
             justify-content: center;
-            padding: 20px;
+            padding-top: 10px;
+            padding-bottom: 5px;
+            padding-left: 20px;
+            padding-right: 20px;
         }
         .main-container { 
             width: 35%;
             position: relative;
-            padding: 15px; 
+            padding-top: 15px;
+            padding-bottom: 15px;
+            padding-left: 15px;
+            padding-right: 15px;
             background: white; 
             border-radius: 8px; 
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             margin-right: 20px;
+        }
+        .title-container { 
+            width: 35%;
+            position: relative;
+            padding-top: 0px;
+            padding-bottom: 0px;
+            padding-left: 15px;
+            padding-right: 15px;
+            background: white; 
+            border-radius: 8px; 
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-right: 20px;
+            align-items: center;
+            text-align: center;
+            background: white; /* Light blue background */
+            color: #002D47;
+        }
+        .plot-title-container {
+            flex-grow: 1;
+            padding-top: 0px;
+            padding-bottom: 0px;
+            padding-left: 15px;
+            padding-right: 15px;
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            background: white; /* Light blue background */
+            color: #002D47;
         }
         .reset-button-container {
             position: absolute;
@@ -26,7 +63,10 @@
         }
         .plot-container {
             flex-grow: 1;
-            padding: 15px;
+            padding-top: 0px;
+            padding-bottom: 15px;
+            padding-left: 15px;
+            padding-right: 15px;
             background: white;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -45,6 +85,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             margin: auto;
             width: 95%;
+            background: linear-gradient(to right, #017ec7, #002d47);
         }
         .logo {
             width: 225px;
@@ -102,34 +143,20 @@
         document.getElementById('invalid_message').innerHTML = '';
     }
 </script>
-<script>
-function downloadExcel() {
-        var xhr = new XMLHttpRequest();
-        xhr.open('POST', '{{ url_for("multi_asset") }}', true);
-        xhr.responseType = 'blob';
-
-        xhr.onload = function(e) {
-            if (this.status == 200) {
-                var blob = new Blob([this.response], {type: 'application/vnd.ms-excel'});
-                var downloadUrl = URL.createObjectURL(blob);
-                var a = document.createElement("a");
-                a.href = downloadUrl;
-                a.download = "lombard_loan_output.xlsx";
-                document.body.appendChild(a);
-                a.click();
-            }
-        };
-
-        xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
-        xhr.send('download_excel=1');
-    }
-</script>
 <body>
     <div class="header">
-        <h2 style="margin: 0; color:#002D47;">Multi-asset LV Calculator</h2>
         <a href="http://127.0.0.1:5000">
             <img src="{{ url_for('static', filename='svb_logo.png') }}" alt="SVB Logo" class="logo" style="width: 225px; height: 50px;">
         </a>
+        <h2 style="margin: 0; color:white;">Multi-asset LV Calculator</h2>        
+    </div>
+    <div class="flex-container">
+        <div class="title-container">
+            <h3 style="color:#002D47;">Inputs</h3>
+        </div>
+        <div class="plot-title-container">
+            <h3 style="color:#002D47;">Outputs</h3>
+        </div>
     </div>
     <div class="flex-container">
     <div class="main-container">
@@ -145,9 +172,12 @@ function downloadExcel() {
         <input type="submit" value="Calculate">
         </form>
         {% if file_processed %}
-    <!-- Separate button for download outside the form -->
-    <button type="button" onclick="downloadExcel()">Download Excel File</button>
-    {% endif %}
+            <form method="POST" action="{{ url_for('multi_asset') }}">
+                <input type="hidden" name="download" value="1">
+                <input type="hidden" name="filename" value="{{ generated_filename }}">
+                <input type="submit" value="Download Excel File">
+            </form>
+        {% endif %}
         <p>{{ error_message|safe }}</p>
         <h4>{{ invalid_message }} </h4>
         {{ invalid_table_html|safe }}
