--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -6,20 +6,20 @@
 <style>
     body { font-family: Arial, sans-serif; background-color: #f4f4f4; color:#002D47;}
     .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background: white;
-            padding-top: 15px;
-            padding-bottom: 15px;
-            padding-left: 20px;
-            padding-right: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin: auto;
-            width: 95%;
-            background: linear-gradient(to right, #017ec7, #002d47);
-            color: white;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background: white;
+        padding-top: 15px;
+        padding-bottom: 15px;
+        padding-left: 20px;
+        padding-right: 20px;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        margin: auto;
+        width: 95%;
+        background: linear-gradient(to right, #017ec7, #002d47);
+        color: white;
     }
     .logo {
         width: 225px;
@@ -33,10 +33,11 @@
         padding-left: 20px;
         padding-right: 20px;
         border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
         margin: auto;
-        width: 50%;
         margin-top: 15px;
+        margin-bottom: 10px;
+        background: #f4f4f4;
     }
     button {
         padding: 10px 20px;
@@ -53,18 +54,30 @@
         background-color: #002d47;
     }
     .guide-container {
-            width: 50%;
-            padding-top: 5px;
-            padding-bottom: 5px;
-            padding-left: 20px;
-            padding-right: 20px;
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin: auto;
-            margin-top: 20px;
-            text-align: center;
-            
+        padding-top: 5px;
+        padding-bottom: 5px;
+        padding-left: 15px;
+        padding-right: 15px;
+        background: white;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        margin: auto;
+        margin-bottom: 10px;
+        text-align: center;
+        background:linear-gradient(to left, #017ec7, #002d47);
+    }
+    .main-container { 
+        width: 50%;
+        padding-top: 15px;
+        padding-bottom: 15px;
+        padding-left: 15px;
+        padding-right: 15px;
+        background: white;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        margin: auto;
+        margin-top: 15px;
+        display: center;
     }
     .easter-egg {
         position: fixed;
@@ -98,14 +111,16 @@
     </a>
     <h2 style="margin: 0; color:white;">Lending Value Calculator for Lombard Loans</h2>
 </div>
-<div class="guide-container">
-    <h3 style="color:#002D47;">Welcome to the LV Calculator for Lombard Loans!</h3>
-</div>
-<div class="button-container">
-    <p style="color:#002D47;">Please select the calculation type below:</p>
-    <button onclick="location.href='{{ url_for('multi_asset') }}'">Multi-asset Calculator</button>
-    <button onclick="location.href='{{ url_for('single_asset') }}'">Single Asset Calculator</button>
-    <button onclick="location.href='{{ url_for('portfolio_builder') }}'">Portfolio Builder</button>
+<div class="main-container">
+    <div class="guide-container">
+        <h3 style="color:white;">Welcome to the LV Calculator for Lombard Loans!</h3>
+    </div>
+    <div class="button-container">
+        <p style="color:#002D47;">Please select the calculation type below:</p>
+        <button onclick="location.href='{{ url_for('single_asset') }}'">Single Asset Calculator</button>
+        <button onclick="location.href='{{ url_for('multi_asset') }}'">Multi-asset Calculator</button>
+        <button onclick="location.href='{{ url_for('portfolio_builder') }}'">Portfolio Builder</button>
+    </div>
 </div>
 <img src="{{ url_for('static', filename='egg.gif') }}" alt="Easter Egg" class="easter-egg" onclick="askQuestion()">
 <audio id="audio" src="{{ url_for('static', filename='cheer.mp3') }}" preload="auto"></audio>
