--- a/src/app/templates/portfolio_builder.html
+++ b/src/app/templates/portfolio_builder.html
@@ -7,29 +7,32 @@
         body { font-family: Arial, sans-serif; background-color: #f4f4f4; color:#002D47;}
         .main-container {
             width: 50%;
-            padding-top: 5px;
-            padding-bottom: 5px;
-            padding-left: 20px;
-            padding-right: 20px;
+            padding-top: 15px;
+            padding-bottom: 15px;
+            padding-left: 15px;
+            padding-right: 15px;
             background: white;
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
             margin: auto;
-            margin-top: 20px;
+            margin-top: 15px;
             display: center;
         } 
         .guide-container {
-            width: 50%;
+            position: relative;
             padding-top: 5px;
             padding-bottom: 5px;
-            padding-left: 20px;
-            padding-right: 20px;
+            padding-left: 15px;
+            padding-right: 15px;
+            background: white; 
+            border-radius: 8px; 
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            align-items: center;
             background: white;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin: auto;
-            margin-top: 20px;
-            text-align: center;
+            justify-content: center;
+            color: #002D47;
+            margin-bottom: 10px;
+            background: #f4f4f4;
         }
         .header {
             display: flex;
@@ -78,10 +81,11 @@
         </a>
         <h2 style="margin: 0; color:white;">Portfolio Builder</h2>
     </div>
-    <div class="guide-container">
-        <h3 style="color:#002d47;">Step-by-Step Guide to Build Your Portfolio</h3>
-    </div>
     <div class="main-container">
+        <div class="guide-container" style="background: linear-gradient(to left, #017ec7, #002d47); text-align: center;">
+            <h3 style="color: white;">Step-by-Step Guide to Build Your Portfolio</h3>
+        </div>
+        <div class="guide-container">
             <div class="step">
                 <h4>Step 1: Download the Template</h4>
                 <p>Download the Excel template to start creating your portfolio. Follow the instructions in the template to enter your data.</p>
@@ -93,16 +97,17 @@
             <div class="step">
                 <h4>Step 2: Upload Your Completed File</h4>
                 <p>Once you've completed the template, upload it here. Your data will be processed to create your final portfolio file.</p>
-                <form id="uploadForm" action="{{ url_for('portfolio_builder') }}" method="post" enctype="multipart/form-data">
-                    <input type="file" name="file">
+                <form id="uploadForm" action="{{ url_for('portfolio_builder') }}" method="post" enctype="multipart/form-data"">
+                    <input type="file" name="file" style="background: white;">
                     <input type="submit" value="Upload">
                 </form>
             </div>
 
             <div class="step">
                 <h4>Step 3: Save Your Portfolio</h4>
-                <p>After uploading, your final portfolio file will be generated. Make sure to save this file to use in the calculator.</p>
+                <p>After uploading, your final portfolio file will be generated. Make sure to save this file to use in the <a href="{{ url_for('multi_asset') }}">multi-asset calculator</a>.</p>
             </div>
+        </div>
     </div>
 </body>
 </html>
